--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,9 @@
   box-sizing: border-box;
 }
 
-html, body, #root {
+ body, #root {
   height: 100%;
+  background: #eaeaeaea;
 }
 
 body {
@@ -16,9 +17,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
